feat: add server install mirror selection
